Trying to fix the overflowing container - mobile - cta section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -215,7 +215,7 @@ header {
     display: flex;
     flex-direction: row;
     width: 100%;
-    align-items: flex-end;
+    align-items: baseline;
     justify-content: space-between;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -247,7 +247,7 @@ section {
   flex-direction: column;
   align-content: center;
   width: 40%;
-  padding-left: 2.25rem;
+  padding: 0 0 0 2.25rem;
 }
 
 .section-title {
@@ -323,6 +323,13 @@ section {
 @media only screen and (max-width: 750px) {
   .container {
     padding: 0;
+  }
+  .container-left {
+    width: 100%;
+  }
+  .container-right {
+    width: 100%;
+    padding: 1rem 1rem 2rem 1rem;
   }
 }
 
@@ -407,16 +414,9 @@ section {
     width: 50%
   }
   .container.learn {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 4rem 0 0 0;
-  }
-  .container-left {
-    width: 100%;
-  }
-  .container-right{
-    width: 100%;
-    padding: 2rem;
   }
 }
 
@@ -440,10 +440,6 @@ section {
 @media only screen and (max-width: 750px) {
   .container-left.main-item {
     display: none;
-  }
-  .container-right {
-    width: 100%;
-    padding: 1rem 1rem 2rem 1rem;
   }
 }
 
